k8s/ticketApp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-application-deployment
  namespace: devops-project
spec:
  replicas: 3
  selector:
    matchLabels:
      component: ticketapp
  template:
    metadata:
      labels:
        component: ticketapp
    spec:
      containers:
        - name: ticket-app
          image: borjanob/ticket_app:58e59f13ad27c23639eab7fb62e3a0430bb42192
          ports: 
            - containerPort: 80
