k8s/mssql-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-database-service
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 1433
      targetPort: 1433
