k8s/mssql-database-statefulset-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-database
  namespace: devops-project
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 1433
      targetPort: 1433
