k8s/ticketApp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ticket-application-service
  namespace: devops-project
spec:
  type: ClusterIP
  selector:
    component: ticketapp
  ports:
    - port: 80
      targetPort: 80
