k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: devops-project
spec:
  rules:
    - http:
        paths:
          - path: /ticket
            pathType: Prefix
            backend:
              service:
                name: ticket-application-service
                port:
                  number: 8000
